--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,63 @@
-body{
-	background: red;
+*{
+	margin: 0;
+	padding: 0;
+	font-family: arial, sans-serif;
+}
+
+header{
+	height: 100px;
+	background: #2F5975;
+	display: flex;
+	align-items: center;
+}
+
+header #titulo{
+	margin-left:30px;
+	color: #E3E9F0; 
+}
+
+#container{
+	width: 100%;
+	height: 83.6vh;
+	background: #DFE4EB;
+	display: flex;
+}
+
+#opcoesContainer{
+	background-color: #3B6E8F;
+	min-width: 200px;
+	/*max-height: 500px;*/
+}
+
+#opcoesContainer ul{
+	list-style: none;
+}
+
+#opcoesContainer li{
+
+}
+
+#opcoesContainer a{
+	margin-top: 15px;
+	display: block;
+	align-items: space-around;
+	background: #2F5975;
+	color: #E3E9F0;
+	text-decoration: none;
+	padding: 25px;
+}
+
+#tarefasContainer{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	overflow: auto;
+	justify-content: center;
+}
+
+.tarefa{
+	width: 40%;
+	margin: 10px;
+	background: #87BCF0;
+	height: 150px;
 }
