--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,8 @@ header #titulo{
 	padding: 25px;
 }
 
+/*Tarefas*/
+
 #tarefasContainer{
 	display: flex;
 	flex-wrap: wrap;
@@ -88,4 +90,43 @@ header #titulo{
 	font-size: 1.2em;
 	margin-left: 7px;
 	cursor: pointer;
+}
+
+/*Criar Tarefa*/
+
+#formulario{
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	align-self: center;
+}
+
+#formulario form{
+	min-height: 270px;
+	min-width: 300px;
+	color: #E3E9F0;
+	background: #2f5988;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#formulario label{
+	margin-bottom: 10px;
+	font-size: 1.5em;
+}
+
+#formulario input[type='text']{
+	width: 65%;
+	height: 30px;
+	padding: 0 5%;
+
+}
+
+#formulario input[type='submit']{
+	height: 50px;
+	width: 70%;
+	margin-top: 30px;
+	
 }
